fixed responsiveness according to small media query for Bio / About me, changing grid column to 1, fixing social icons to absolute position upper-left, titles not displaying on mobile

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,10 +1,12 @@
 .about {
+    min-width: 280px;
     padding-bottom: 1rem;
 
     &__bio-image {
         height: 20vh;
         width: 100%;
         display: flex;
+        padding: 2rem;
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
